--- a/CR202TT9.md
+++ b/CR202TT9.md
@@ -8,6 +8,38 @@ I recently became the owner of one of these CRTs for free, so I couldn't pass up
 
 The manual can be found [here](https://www.manualslib.com/manual/479694/Trutech-Cr202tt9.html). I mostly did not use this manual.
 
-## Factory Menu
+## Factory Menus
 
 Once you have followed [the guide](MODIFYING.md) for modifying the remote to be a factory remote, you can enter the factory settings! I am going to document the various menus I find here and what buttons to press to get to the menu.
+
+### Version/Diagnostic Information
+
+Pressing SLEEP, you will see some information on screen. Mine contained the following, although I ultimately have zero idea the purpose of this information.
+
+```
+128             128
+  A13-0.20. 17
+   21
+   
+   
+   00
+   6D01.        M
+128             128
+```
+
+If someone has any idea what this information conveys, please make a pull request 🙂
+
+Pressing INFO, we see something very similar.
+
+```
+FF              128
+  A13-0.20. 17
+   21
+   
+   
+   00
+   6D01.        M
+128             128
+```
+
+Initially, it is white, blinks for a moment, then turns red. I again have no idea what this conveys.
