--- a/CR202TT9.md
+++ b/CR202TT9.md
@@ -43,3 +43,9 @@ FF              128
 ```
 
 Initially, it is white, blinks for a moment, then turns red. I again have no idea what this conveys.
+
+Pressing CHANNEL RECALL will display the menu from SLEEP again, but only after having pressed it once.
+
+### Picture Adjust
+
+Pressing MENU, we get a few different options.
